manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: velmi-ai-group-aidet-app-aidet-app-backend-back-service
spec:
  selector:
    app: aidetectorfront
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
