manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aidetectorfront-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: 150m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "180"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "180"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "180"
    nginx.ingress.kubernetes.io/send-timeout: "180"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - aidetector.velmi.ai
      secretName: aidetectorfront-velmi-ai-tls
  rules:
    - host: aidetector.velmi.ai
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: velmi-ai-group-aidet-app-aidet-app-frontend-front-service
                port:
                  number: 80
